[project]
name = "tpcp"
version = "2.1.1"
description = "Pipeline and Dataset helpers for complex algorithm evaluation."
authors = [
    { name = "Arne Küderle", email = "arne.kuederle@fau.de" },
    { name = "Robert Richer", email = "robert.richer@fau.de" },
    { name = "Raul C. Sîmpetru", email = "raul.simpetru@fau.de" },
    { name = "Björn Eskofier", email = "bjoern.eskofier@fau.de" },
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
dependencies = [
    "joblib>=1.3",
    "scikit-learn>=1.2.0",
    "numpy>=1.0",
    "pandas>=1.3",
    "tqdm>=4.62.3",
    "typing-extensions>=4.1.1",
]

[project.optional-dependencies]
x-torch_cpu = ["torch>=1.6.0"]
x-tensorflow = ["tensorflow-cpu>=2.16.0; python_full_version < '3.14'"]
optuna = ["optuna>=2.10"]
attrs = ["attrs>=22.1.0"]

[project.urls]
Homepage = "https://github.com/mad-lab-fau/tpcp"
Repository = "https://github.com/mad-lab-fau/tpcp"

[project.entry-points.pytest11]
tpcp_snapshots = "tpcp.testing._regression_utils"

[dependency-groups]
dev = [
    "pydata-sphinx-theme>=0.14.1,<0.15",
    "pytest>=8.4.2,<9",
    "pytest-cov>=7.0.0,<8",
    "poethepoet>=0.10.0,<0.11",
    "pyright>=1.1.230,<2",
    "numpydoc>=1.4.0,<2",
    "sphinx-gallery>=0.14.0,<0.15",
    "recommonmark>=0.7.1,<0.8",
    "memory-profiler>=0.58.0,<0.59",
    "matplotlib>=3.4.3,<4",
    "toml>=0.10.2,<0.11",
    "Sphinx>=7.2.6,<8",
    "ruff>=0.14.0,<0.15",
    "tensorflow-cpu>=2.18.0rc2,<3; python_full_version < '3.14'",
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
torch = { index = "torch_cpu" }

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"

[[tool.uv.index]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.poe.tasks]
_format = "ruff format ."
_auto_fix = "ruff check . --fix-only --show-fixes --exit-zero"
_auto_fix_unsafe = "ruff check . --fix-only --show-fixes --exit-zero --unsafe-fixes"
format = ["_auto_fix", "_format"]
format_unsafe = ["_auto_fix_unsafe", "_format"]
lint = { cmd = "ruff check src/tpcp --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check src/tpcp --output-format=github"
_check_format = "ruff format . --check"
ci_check = { sequence = ["_check_format", "_lint_ci"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest ./tests --cov=tpcp --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
docs = { "script" = "_tasks:task_docs()",  help = "Build the html docs using Sphinx." }
docs_clean = { "script" = "_tasks:task_docs(clean=True)",  help = "Remove all old build files and build a clean version of the docs." }
docs_preview = { cmd = "python -m http.server --directory docs/_build/html", help = "Preview the built html docs." }
version = { "script" = "_tasks:task_update_version()" }

[tool.pyright]
pythonVersion = "3.9"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
